prototype/3DO/from_poy4/algn.h

int
algn_nw_2d (const seq_p seq1, const seq_p seq2, const cost_matrices_2d_p c, nw_matrices_p m, int uk);
/** takes two previously aligned sequences, @param seq1 & @param seq2, for which some align function has been called,
 *  and extracts their
 *  edited version into @param ret_seq1 and @param ret_seq2, using the alignment matrix @param m and the transformation
 *  cost mstrix @param c. *Nota bene:* Make sure the m and c are the same as used in the alignment of
 *  the sequence for the call of cost_2. No check of an appropriate call of cost_2
 *  is made, therefore the behavior of the function in that case is undefined.
 *  As passed in, unaligned seq1 is always longer than seq2.
 *  If @param swapped == 1, then seq1 and seq2 are in their original order. Otherwise, len_seq2 > len_seq1
 *  so they have been switched before the call (meaning that seq1 is still the longest).
 *  Depending on the case, deletion or insertion may be biased toward either longer or shorter.
 *  @param st_seq1 and @param st_seq2 are 0 if there are no limits, have values otherwise.
 */
void
algn_backtrace_2d ( const seq_p seq1, const seq_p seq2,
               seq_p ret_seq1, seq_p ret_seq2,
               const nw_matrices_p m, const cost_matrices_2d_p c,
               int st_seq1, int st_seq2,
               int swapped
              );
void
algn_get_median_2d_no_gaps (seq_p seq1, seq_p seq2, cost_matrices_2d_p m, seq_p sm);
void
algn_get_median_2d_with_gaps (seq_p seq1, seq_p seq2, cost_matrices_2d_p m, seq_p sm);
void
algn_union (seq_p seq1, seq_p seq2, seq_p su);