prototype/POY_FFI/c_code_alloc_setup.h

nw_matrices_p initializeNWMtx();
seq_p initializeSeq(size_t allocSize, const int *vals, size_t length);
// may return cost_matrices_2d or cost_matrices_3d, so void *
// no longer setting max, as algorithm to do so is unclear: see note in .c file
void * setupCostMtx(int* tcm, int alphSize, int gap_open, int is_2d, seq_p longSeq);